--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rust-response-enum-ts",
-  "version": "1.0.0",
+  "name": "rust-result-enum-ts",
+  "version": "1.0.1",
   "description": "A rust inspired result enum for better responses in TypeScript",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -11,6 +11,10 @@
   "files": [
     "dist/"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cblokkeel/rust-result-enum-ts"
+  },
   "keywords": [
     "npm",
     "library",
